# cchub-cloud

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  config.example.toml  install.sh
.github/workflows/: release.yml
app/: .gitignore  README.md  package-lock.json  package.json
app/scripts/: gen-icon.cjs  prepare-sidecar.sh
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/ui/: index.html
daemon/: Cargo.toml
daemon/src/: account.rs  auth.rs  codex_live.rs  config.rs  gemini_live.rs  jsonl.rs  main.rs  paths.rs  pricing.rs  provision.rs  server.rs  sessions.rs  state.rs  tunnel.rs  usage_store.rs
daemon/src/session/: mod.rs  pty.rs  tmux.rs
proto/: Cargo.toml
proto/src/: lib.rs
scripts/: build-release.sh  install-from-source.sh  sync-release.sh
web/: guide.html  index.html  remote.html  settings.html  sounds.js  stats.html
