[workspace]
members = ["daemon", "proto"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.20"
license = "MIT"
authors = ["zhifeng <zhifengwang686@gmail.com>"]
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

