[package]
name = "cc-console-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cc-console"
path = "src/main.rs"

[dependencies]
cc-console-proto = { path = "../proto" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = { version = "8", features = ["mime-guess"] }
portable-pty = "0.9"
vt100 = "0.15"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
